mpri242/test/bad/expected3.f
(* Expected an algebraic data type, got an arrow. *)
type int
program
let identity (x : int) : int = x in
match identity return int with
end
